--- a/public/page_asset/css/custom.css
+++ b/public/page_asset/css/custom.css
@@ -2,3 +2,30 @@
   font-size: 15px;
   margin-top: 20px;
 }
+
+input[type=file] {
+  font-size: 12px;
+  line-height: 30px;
+  margin-top: 10px;
+}
+
+input[type=file]:before {
+  cursor: pointer;
+  content: 'Select file';
+  display: inline-block;
+  color: white;
+  border-radius: 5px;
+  background-color: #ef6c57;
+  padding: 0 5px;
+  cursor: pointer;
+}
+
+input[type=file]:hover::before {
+  background-color: #fff;
+  color: black;
+  border: 1px solid black;
+}
+
+input[type=file]::-webkit-file-upload-button {
+  visibility: hidden;
+}
