--- a/public/page_asset/css/custom.css
+++ b/public/page_asset/css/custom.css
@@ -2,3 +2,213 @@
   font-size: 15px;
   margin-top: 20px;
 }
+
+input[type=file] {
+  font-size: 12px;
+  line-height: 30px;
+  margin-top: 10px;
+}
+
+input[type=file]:before {
+  cursor: pointer;
+  content: 'Select file';
+  display: inline-block;
+  color: white;
+  border-radius: 5px;
+  background-color: #ef6c57;
+  padding: 0 5px;
+  cursor: pointer;
+}
+
+input[type=file]:hover::before {
+  background-color: #fff;
+  color: black;
+  border: 1px solid black;
+}
+
+input[type=file]::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+@media screen and (max-width: 1000px)
+{
+  td{
+    padding: 4px !important;
+  }
+  th{
+    padding: 4px !important;
+  }
+  #minsize {
+    font-size: 15px;
+    padding: 3px;
+  }
+  .btn-in-table {
+    font-size: 15px;
+    padding: 3px;
+  }
+  .card {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 900px)
+{
+  td{
+    padding: 4px !important;
+  }
+  th{
+    padding: 4px !important;
+  }
+  #minsize {
+    font-size: 12px;
+    padding: 3px;
+  }
+  .btn-in-table {
+    font-size: 12px;
+    padding: 2px;
+  }
+  .card {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 750px)
+{
+  td{
+    padding: 3px !important;
+  }
+  th{
+    padding: 3px !important;
+  }
+  #minsize {
+    font-size: 11px;
+    padding: 3px;
+  }
+  .btn-in-table {
+    font-size: 9px;
+    padding: 2px;
+  }
+  .card {
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 600px)
+{
+  td{
+    padding: 3px !important;
+  }
+  th{
+    padding: 3px !important;
+  }
+  #minsize {
+    font-size: 9px;
+    padding: 3px;
+  }
+  .btn-in-table {
+    font-size: 8px;
+    padding: 2px;
+  }
+  .card {
+    font-size: 9px;
+  }
+}
+
+@media screen and (max-width: 500px)
+{
+  td{
+    padding: 2px !important;
+  }
+  th{
+    padding: 2px !important;
+  }
+  #minsize {
+    font-size: 7px;
+    padding: 2px;
+  }
+  .btn-in-table {
+    font-size: 6px;
+    padding: 2px;
+  }
+  .card {
+    font-size: 7px;
+  }
+}
+
+@media screen and (max-width: 400px)
+{
+  td{
+    padding: 2px !important;
+  }
+  th{
+    padding: 2px !important;
+  }
+  .btn-in-table {
+    font-size: 6px;
+    padding: 2px;
+  }
+  #btn-see {
+    font-size: 6px;
+    padding: 2px;
+  }
+  .card {
+    font-size: 6px;
+  }
+}
+
+@media screen and (max-width: 350px)
+{
+  td{
+    padding: 1px !important;
+  }
+  th{
+    padding: 1px !important;
+  }
+  #minsize {
+    font-size: 5px;
+    padding: 2px;
+  }
+  .btn-in-table {
+    font-size: 5px;
+    padding: 2px;
+  }
+  .card {
+    font-size: 5px;
+  }
+}
+.float-right-header{
+  float: right;
+  position: relative;
+}
+.image-block{
+  display: inline-block;
+  margin: 5px;
+}
+.margin-popup{
+  margin-top: 75px;
+}
+.margin-popup-left
+{
+  margin-left: 108px;
+}
+.margin-auto-popup{
+  margin: 0px auto;
+}
+.center-popup{
+  text-align: center;
+}
+.width-100{
+  width: 100%;
+}
+.width-50{
+  width: 40%;
+}
+.input-busy-date{
+  cursor: pointer;
+  width: 89%;
+  float: left;
+}
+.btn-OK-busy{
+  width: 10%;
+  float: right;
+}
